--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,10 @@
 ---
-layout: default
+layout: pages
 ---
+
 <h2>{{ page.title }}</h2>
 <p class="meta">{{ page.date | date_to_string }}</p>
 
-<div class="post">
-{{ content }}
+<div class="col-xs-12 col-sm-8 col-md-9 home-wrap">
+  {{ content }}
 </div>
