Made responsive for mobil, fixed limit:n loops

--- a/assets/css/1-base/_vars.sass
+++ b/assets/css/1-base/_vars.sass
@@ -1,7 +1,8 @@
 $primary-color: #F6C
 $text-color: #2E2D33
 $accent-color: #000
-$bg-color: white
+$bg-color: #FAFAFA
 $link-color: $accent-color
 $selection-color: #FFF498
 $grey-color: #757575
+$hover-grey: #F5F5F5
