--- a/assets/css/2-modules/header.sass
+++ b/assets/css/2-modules/header.sass
@@ -24,10 +24,13 @@
           padding: 0
           text-align: center
           ul
-            width: 75%
-            margin: 0 12.5%
+            width: 100%
+            font-size: 16px
+            @media (min-width: 992px)
+              width: 70%
+              margin: 0 12.5%
+              font-size: 18px
             float: center
-            font-size: 18px
             font-weight: 500
             li
               text-align: center
