--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,6 +1,6 @@
 @import "0-tools/bourbon/bourbon";
 @import "0-tools/normalize";
-@import "0-tools/clearfix";
+@import "0-tools/animate";
 @import "0-tools/fonts";
 @import "1-base/base.sass";
 @import "2-modules/header.sass";
