--- a/assets/css/2-modules/header.sass
+++ b/assets/css/2-modules/header.sass
@@ -14,6 +14,10 @@
 
     nav
       border: none
+      @media (min-width: 786px)
+        border-top: solid 1px #616161
+        border-bottom: solid 1px #616161
+        border-radius: 0
       background: none
       @media (min-width: 786px)
         .navbar-header
@@ -25,8 +29,8 @@
           text-align: center
           ul
             width: 100%
-            font-size: 16px
-            @media (min-width: 992px)
+            font-size: 15px
+            @media (min-width: 1080px)
               width: 70%
               margin: 0 12.5%
               font-size: 18px
