--- a/assets/css/4-layouts/home.sass
+++ b/assets/css/4-layouts/home.sass
@@ -19,6 +19,7 @@
       border-radius: 2px
       cursor: pointer
       background: white
+      border-top: solid 5px #FAFAFA
       .thumbnails
         transform: scale(1.012)
     .category
