--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ site.url }}/assets/css/main.css">
-    <link rel="stylesheet" href="{{ site.url }}/assets/css/super-search.css">
   </head>
   <body>
     <div class="container">
@@ -18,20 +17,18 @@
 
       <div class="row">
         {{ content }}
-
-        {% include sidebar.html %}
       </div>
 
-      {% include footer.html %}
-
     </div>
-
+    <div class="container-fluid" id="footer-container">
+      {% include footer.html %}
+    </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-    <script src="js/super-search.js"></script>
+    <script src="js/function.js"></script>
   </body>
 </html>
