--- a/_layouts/pages.html
+++ b/_layouts/pages.html
@@ -16,10 +16,9 @@
       {% include header.html %}
 
       <div class="row">
-        <div class="col-xs-12 col-sm-8 col-md-9 home-wrap">
+        <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 home-wrap">
           {{ content }}
         </div>
-        {% include sidebar.html %}
       </div>
 
       {% include footer.html %}
