--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2,6 +2,7 @@
 @import "0-tools/normalize";
 @import "0-tools/animate";
 @import "0-tools/fonts";
+@import "0-tools/mixins.scss";
 @import "1-base/base.sass";
 @import "2-modules/header.sass";
 @import "2-modules/sidebar.sass";
