--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,9 @@
 ---
-layout: default
+layout: pages
 ---
 
 
-<div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-7 col-md-offset-1 article-container">
+<div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 article-container">
   <span class="category">{{ page.categories }} </span>
   <h2>{{ page.title }}</h2>
   <p class="meta">{{ page.date | date_to_string }} | {{ page.description }}</p>
