--- a/assets/css/1-base/_base.sass
+++ b/assets/css/1-base/_base.sass
@@ -1,69 +1,14 @@
 @import "_vars.sass"
 //	Typography
-
-.gigantic, .huge, .large, .bigger, .big,
-h1, h2, h3, h4, h5, h6
-  color: $accent-color
-  font-weight: bold
-
-.gigantic
-  font-size: 110px
-  line-height: 1.09
-  letter-spacing: -2px
-
-.huge, h1
-  font-size: 68px
-  line-height: 1.05
-  letter-spacing: -1px
-
-.large, h2
-  font-size: 42px
-  line-height: 1.14
-
-.bigger, h3
-  font-size: 26px
-  line-height: 1.38
-
-.big, h4
-  font-size: 22px
-  line-height: 1.38
-
-.small, small
-  font-size: 10px
-  line-height: 1.2
-
-
-
-p
-  margin: 0 0 20px 0
-
-em
-  font-style: italic
-
-strong
-  font-weight: bold
-
-hr
-  border: solid #ddd
-  border-width: 1px 0 0
-  clear: both
-  margin: 10px 0 30px
-  height: 0
-
-
-
-// Links
-
-a
-  color: $link-color
-  text-decoration: none
-  outline: 0
-
-a:hover, a:focus
-  color: lighten($link-color, 20%)
-
-
-
+h1
+  font-size: 36px
+h3
+  font-size: 24px
+h5
+  margin-bottom: 0
+  margin-top: 15px
+h1, h3
+  font-family: $Pacifico
 // Selection colors (easy to forget)
 
 ::selection
@@ -100,5 +45,24 @@ body
 
 .container
   padding: 0
+  @media (min-width: 786px)
+    padding: 0 0 100px 0
 .no-padding
   padding: 0
+
+.logo
+  font-family: $Pacifico
+  text-align: center
+  font-weight: 300
+  color: $primary-color
+.section-divider
+  .style
+    border-bottom: solid 2px $primary-color-light
+    height: 100%
+    height: 45px
+    @media (max-width: 786px)
+      display: none
+  h1
+    font-family: $Pacifico
+    text-align: center
+    color: $primary-color-dark
