--- a/assets/css/4-layouts/home.sass
+++ b/assets/css/4-layouts/home.sass
@@ -1,34 +1,57 @@
 .home-wrap
-  .category-bar
-    border-left: solid 4px #4DB6AC
-    padding-left: 6px
-    span
-      color: $grey-color
-      font-size: 14px
-      font-weight: 300
-    .glyphicon
-  .article-cards
-    display: block
-    margin: 20px 0
-    clear: right
+  .recent-articles
+    h5
+      margin-bottom: 5px
+      @media (max-width: 786px)
+        margin-bottom: 25px
+    .category
+      margin-top: 5px
+      margin-bottom: 0
+  // Make small columns pretty
+  @media (min-width: 786px) and (max-width: 992px)
+    .col-sm-3:nth-child(4n+1)
+      clear: both
+  // Make medium columns pretty
+  @media (min-width: 992px)
+    .col-md-2
+      width: 18%
+      padding: 1%
+      display: inline-block
+    .col-md-2:nth-child(5n+1)
+      clear: both
+  .half-section-left
     @media (min-width: 786px)
-      height: 320px
-    padding: 7px
+      padding-right: 3px
+  .half-section-right
+    @media (min-width: 786px)
+      padding-left: 3px
+  .article-cards
     transition: 350ms ease-in-out
     &:hover
       border-radius: 2px
       cursor: pointer
-      background: white
-      border-top: solid 5px #FAFAFA
+      transform: scale(1.012)
       .thumbnails
         transform: scale(1.012)
-    .category
+        opacity: 1
+        filter: alpha(opacity=100)
+    h5
+      margin-top: 5px
+    .date
+      margin-top: 5px
+      margin-bottom: 0
+    .category, .date
       text-transform: uppercase
-      color: $grey-color
+      color: $secondary-text
       font-size: 12px
       &:hover
         text-decoration: underline
     .description
-      color: $grey-color
+      color: $secondary-text
     .thumbnails
       width: 100%
+  .border-top
+    border-top: solid 2px $primary-color-light
+  .push-down
+    @media (min-width: 786px)
+      padding-top: 40px
