--- a/assets/css/4-layouts/post.sass
+++ b/assets/css/4-layouts/post.sass
@@ -1,12 +1,12 @@
 .article-container
   .category
     text-transform: uppercase
-    color: $grey-color
+    color: $secondary-text
     font-size: 12px
     &:hover
       text-decoration: underline
   .meta
-    color: $grey-color
+    color: $secondary-text
     font-size: 12px
   .post-title-image
     img
