--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,6 +5,7 @@
  *    user zoom.
  */
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600,400italic,300);
+@import url(https://fonts.googleapis.com/css?family=Pacifico);
 html {
   font-family: sans-serif;
   /* 1 */
@@ -2720,69 +2721,27 @@ th {
   -webkit-animation-name: slideOutUp;
   animation-name: slideOutUp; }
 
-.gigantic, .huge, .large, .bigger, .big,
-h1, h2, h3, h4, h5, h6 {
-  color: #000;
-  font-weight: bold; }
+h1 {
+  font-size: 36px; }
 
-.gigantic {
-  font-size: 110px;
-  line-height: 1.09;
-  letter-spacing: -2px; }
+h3 {
+  font-size: 24px; }
 
-.huge, h1 {
-  font-size: 68px;
-  line-height: 1.05;
-  letter-spacing: -1px; }
+h5 {
+  margin-bottom: 0;
+  margin-top: 15px; }
 
-.large, h2 {
-  font-size: 42px;
-  line-height: 1.14; }
-
-.bigger, h3 {
-  font-size: 26px;
-  line-height: 1.38; }
-
-.big, h4 {
-  font-size: 22px;
-  line-height: 1.38; }
-
-.small, small {
-  font-size: 10px;
-  line-height: 1.2; }
-
-p {
-  margin: 0 0 20px 0; }
-
-em {
-  font-style: italic; }
-
-strong {
-  font-weight: bold; }
-
-hr {
-  border: solid #ddd;
-  border-width: 1px 0 0;
-  clear: both;
-  margin: 10px 0 30px;
-  height: 0; }
-
-a {
-  color: #000;
-  text-decoration: none;
-  outline: 0; }
-
-a:hover, a:focus {
-  color: #333333; }
+h1, h3 {
+  font-family: Pacifico, cursive; }
 
 ::-moz-selection {
-  background: #FFF498; }
+  background: #B2EBF2; }
 
 ::selection {
-  background: #FFF498; }
+  background: #B2EBF2; }
 
 ::-moz-selection {
-  background: #FFF498; }
+  background: #B2EBF2; }
 
 img::-moz-selection {
   background: transparent; }
@@ -2794,38 +2753,71 @@ img::-moz-selection {
   background: transparent; }
 
 body {
-  -webkit-tap-highlight-color: #FFF498; }
+  -webkit-tap-highlight-color: #B2EBF2; }
 
 html,
 body {
   min-height: 100vh; }
 
 body {
-  background: #FAFAFA;
+  background: white;
   font-size: 14px;
   line-height: 1.6;
   font-family: 'Open Sans' sans-serif;
-  color: #2E2D33;
+  color: #212121;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%; }
 
 .container {
   padding: 0; }
+  @media (min-width: 786px) {
+    .container {
+      padding: 0 0 100px 0; } }
 
 .no-padding {
   padding: 0; }
 
-@media (max-width: 786px) {
-  #large-header {
-    display: none; } }
+.logo {
+  font-family: Pacifico, cursive;
+  text-align: center;
+  font-weight: 300;
+  color: #00BCD4; }
+
+.section-divider .style {
+  border-bottom: solid 2px #B2EBF2;
+  height: 100%;
+  height: 45px; }
+  @media (max-width: 786px) {
+    .section-divider .style {
+      display: none; } }
+
+.section-divider h1 {
+  font-family: Pacifico, cursive;
+  text-align: center;
+  color: #0097A7; }
+
+#large-header {
+  text-align: center;
+  height: 150px;
+  position: relative; }
+  @media (max-width: 786px) {
+    #large-header {
+      display: none; } }
+  #large-header .logo {
+    height: auto; }
+  #large-header .social-bar img {
+    display: inline;
+    width: 40px;
+    height: 40px;
+    margin: 5px; }
 
 #small-header {
+  font-family: Pacifico, cursive;
   padding: 0;
-  margin: 0;
   height: 55px; }
   @media (min-width: 786px) {
     #small-header {
-      margin-bottom: 20px; } }
+      margin-bottom: 45px; } }
   #small-header .row {
     padding: 0;
     margin: 0;
@@ -2835,8 +2827,8 @@ body {
       background: none; }
       @media (min-width: 786px) {
         #small-header .row nav {
-          border-top: solid 1px #616161;
-          border-bottom: solid 1px #616161;
+          border-top: solid 1px #B6B6B6;
+          margin-top: 25px;
           border-radius: 0; } }
       @media (min-width: 786px) {
         #small-header .row nav .navbar-header {
@@ -2847,90 +2839,122 @@ body {
           padding: 0;
           text-align: center; }
           #small-header .row nav .collapse ul {
-            width: 100%;
-            font-size: 15px;
-            float: center;
-            font-weight: 500; } }
-    @media (min-width: 786px) and (min-width: 1080px) {
-      #small-header .row nav .collapse ul {
-        width: 70%;
-        margin: 0 12.5%;
-        font-size: 18px; } }
-      @media (min-width: 786px) {
+            width: 90%;
+            margin: 0 5%;
+            font-size: 17px;
+            font-weight: 300;
+            float: center; }
             #small-header .row nav .collapse ul li {
               text-align: center;
-              width: 16.66%; }
+              width: 12.5%; }
               #small-header .row nav .collapse ul li a {
-                color: black; } }
+                color: #727272; } }
 
-.sidebar {
-  background: white;
-  margin: 0;
-  padding-top: 0;
-  top: 0;
-  height: 100vh; }
-  .sidebar img {
-    width: 50px;
-    margin: 0 5px;
-    display: inline; }
+#footer-container {
+  background: #00BCD4;
+  border-top: 10px solid #0097A7;
+  color: white;
+  width: 100vw;
+  padding-bottom: 50px; }
+  #footer-container .row {
+    max-width: 1080px;
+    margin: auto; }
+    #footer-container .row .col-sm-3 {
+      height: 200px; }
+    #footer-container .row .right-bar {
+      border-left: solid 2px #B2EBF2;
+      height: 100%;
+      margin-top: 5%; }
+      #footer-container .row .right-bar .social-bar img {
+        display: inline;
+        width: 40px;
+        height: 40px;
+        margin: 5px; }
+      #footer-container .row .right-bar .subscribe .subscribe-container {
+        background: #B2EBF2;
+        height: 80px;
+        width: 300px; }
+        #footer-container .row .right-bar .subscribe .subscribe-container input {
+          background: white;
+          height: 100%;
+          width: 100%; }
+        #footer-container .row .right-bar .subscribe .subscribe-container button {
+          background: yellow; }
 
-footer {
-  border-top: 1px solid grey;
-  padding: 20px 0; }
-  footer .social-bar img {
-    width: 50px;
-    margin: 5px 0 5px 0;
-    display: block;
-    float: right;
-    clear: both; }
-  footer .bottom-about {
-    border-left: solid 4px lightblue; }
+.home-wrap .recent-articles h5 {
+  margin-bottom: 5px; }
+  @media (max-width: 786px) {
+    .home-wrap .recent-articles h5 {
+      margin-bottom: 25px; } }
 
-.home-wrap .category-bar {
-  border-left: solid 4px #4DB6AC;
-  padding-left: 6px; }
-  .home-wrap .category-bar span {
-    color: #757575;
-    font-size: 14px;
-    font-weight: 300; }
+.home-wrap .recent-articles .category {
+  margin-top: 5px;
+  margin-bottom: 0; }
+
+@media (min-width: 786px) and (max-width: 992px) {
+  .home-wrap .col-sm-3:nth-child(4n+1) {
+    clear: both; } }
+
+@media (min-width: 992px) {
+  .home-wrap .col-md-2 {
+    width: 18%;
+    padding: 1%;
+    display: inline-block; }
+  .home-wrap .col-md-2:nth-child(5n+1) {
+    clear: both; } }
+
+@media (min-width: 786px) {
+  .home-wrap .half-section-left {
+    padding-right: 3px; } }
+
+@media (min-width: 786px) {
+  .home-wrap .half-section-right {
+    padding-left: 3px; } }
 
 .home-wrap .article-cards {
-  display: block;
-  margin: 20px 0;
-  clear: right;
-  padding: 7px;
   transition: 350ms ease-in-out; }
-  @media (min-width: 786px) {
-    .home-wrap .article-cards {
-      height: 320px; } }
   .home-wrap .article-cards:hover {
     border-radius: 2px;
     cursor: pointer;
-    background: white;
-    border-top: solid 5px #FAFAFA; }
+    -webkit-transform: scale(1.012);
+            transform: scale(1.012); }
     .home-wrap .article-cards:hover .thumbnails {
       -webkit-transform: scale(1.012);
-              transform: scale(1.012); }
-  .home-wrap .article-cards .category {
+              transform: scale(1.012);
+      opacity: 1;
+      filter: alpha(opacity=100); }
+  .home-wrap .article-cards h5 {
+    margin-top: 5px; }
+  .home-wrap .article-cards .date {
+    margin-top: 5px;
+    margin-bottom: 0; }
+  .home-wrap .article-cards .category, .home-wrap .article-cards .date {
     text-transform: uppercase;
-    color: #757575;
+    color: #727272;
     font-size: 12px; }
-    .home-wrap .article-cards .category:hover {
+    .home-wrap .article-cards .category:hover, .home-wrap .article-cards .date:hover {
       text-decoration: underline; }
   .home-wrap .article-cards .description {
-    color: #757575; }
+    color: #727272; }
   .home-wrap .article-cards .thumbnails {
     width: 100%; }
 
+.home-wrap .border-top {
+  border-top: solid 2px #B2EBF2; }
+
+@media (min-width: 786px) {
+  .home-wrap .push-down {
+    padding-top: 40px; } }
+
 .article-container .category {
   text-transform: uppercase;
-  color: #757575;
+  color: #727272;
   font-size: 12px; }
   .article-container .category:hover {
     text-decoration: underline; }
 
 .article-container .meta {
-  color: #757575;
+  color: #727272;
   font-size: 12px; }
 
 .article-container .post-title-image img {
