--- a/assets/css/2-modules/footer.sass
+++ b/assets/css/2-modules/footer.sass
@@ -21,12 +21,28 @@
           margin: 5px
       .subscribe
         .subscribe-container
-          background: $primary-color-light
-          height: 80px
-          width: 300px
+          height: 50px
+          width: 250px
+          padding: 0
           input
-            background: white
+            font-family: $Pacifico
+            color: $primary-color
+            font-size: 18px
             height: 100%
-            width: 100%
+            width: 185px
+            float: left
+            border: none
+            padding-left: 5px
+            border-bottom-left-radius: 4px
+            border-top-left-radius: 4px
           button
-            background: yellow
+            background: $primary-color-light
+            border: none
+            width: 60px
+            height: 50px
+            margin: 0
+            float: left
+            border-top-right-radius: 4px
+            border-bottom-right-radius: 4px
+            font-family: $Pacifico
+            color: $primary-color
