--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2727,12 +2727,30 @@ h1 {
 h3 {
   font-size: 24px; }
 
+h1, h3 {
+  font-family: Pacifico, cursive; }
+
 h5 {
   margin-bottom: 0;
   margin-top: 15px; }
 
-h1, h3 {
-  font-family: Pacifico, cursive; }
+p {
+  font-size: 16px; }
+
+.post-title {
+  font-size: 36px;
+  color: #00BCD4;
+  margin-top: 5px; }
+
+.caption {
+  color: #727272;
+  font-size: 14px;
+  padding: 15px 0 5px 0; }
+
+.meta {
+  text-transform: uppercase;
+  color: #727272;
+  font-size: 14px; }
 
 ::-moz-selection {
   background: #B2EBF2; }
@@ -2768,20 +2786,12 @@ body {
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%; }
 
-.container {
-  padding: 0; }
-  @media (min-width: 786px) {
-    .container {
-      padding: 0 0 100px 0; } }
+@media (min-width: 786px) {
+  .container {
+    padding: 0 0 100px 0; } }
 
 .no-padding {
   padding: 0; }
-
-.logo {
-  font-family: Pacifico, cursive;
-  text-align: center;
-  font-weight: 300;
-  color: #00BCD4; }
 
 .section-divider .style {
   border-bottom: solid 2px #B2EBF2;
@@ -2850,6 +2860,43 @@ body {
               #small-header .row nav .collapse ul li a {
                 color: #727272; } }
 
+@media (min-width: 786px) {
+  .sidebar {
+    height: auto;
+    margin-top: 15%;
+    border-left: solid 2px #B2EBF2; } }
+
+.sidebar .article-cards {
+  transition: 350ms ease-in-out; }
+  @media (min-width: 786px) {
+    .sidebar .article-cards {
+      margin: 40px auto; } }
+  .sidebar .article-cards:hover {
+    border-radius: 2px;
+    cursor: pointer;
+    -webkit-transform: scale(1.012);
+            transform: scale(1.012); }
+    .sidebar .article-cards:hover .thumbnails {
+      -webkit-transform: scale(1.012);
+              transform: scale(1.012);
+      opacity: 1;
+      filter: alpha(opacity=100); }
+  .sidebar .article-cards h5 {
+    margin-top: 5px; }
+  .sidebar .article-cards .date {
+    margin-top: 5px;
+    margin-bottom: 0; }
+  .sidebar .article-cards .category, .sidebar .article-cards .date {
+    text-transform: uppercase;
+    color: #727272;
+    font-size: 12px; }
+    .sidebar .article-cards .category:hover, .sidebar .article-cards .date:hover {
+      text-decoration: underline; }
+  .sidebar .article-cards .description {
+    color: #727272; }
+  .sidebar .article-cards .thumbnails {
+    width: 100%; }
+
 #footer-container {
   background: #00BCD4;
   border-top: 10px solid #0097A7;
@@ -2871,15 +2918,46 @@ body {
         height: 40px;
         margin: 5px; }
       #footer-container .row .right-bar .subscribe .subscribe-container {
-        background: #B2EBF2;
-        height: 80px;
-        width: 300px; }
+        height: 50px;
+        width: 250px;
+        padding: 0; }
         #footer-container .row .right-bar .subscribe .subscribe-container input {
-          background: white;
+          font-family: Pacifico, cursive;
+          color: #00BCD4;
+          font-size: 18px;
           height: 100%;
-          width: 100%; }
+          width: 185px;
+          float: left;
+          border: none;
+          padding-left: 5px;
+          border-bottom-left-radius: 4px;
+          border-top-left-radius: 4px; }
         #footer-container .row .right-bar .subscribe .subscribe-container button {
-          background: yellow; }
+          background: #B2EBF2;
+          border: none;
+          width: 60px;
+          height: 50px;
+          margin: 0;
+          float: left;
+          border-top-right-radius: 4px;
+          border-bottom-right-radius: 4px;
+          font-family: Pacifico, cursive;
+          color: #00BCD4; }
+
+.author-block {
+  margin: 50px 0;
+  border-top: solid 2px #B6B6B6; }
+  .author-block h3 {
+    color: #FF5252; }
+  .author-block .social-bar {
+    width: 100%;
+    display: -webkit-inline-flex;
+    display: -ms-inline-flexbox;
+    display: inline-flex; }
+    .author-block .social-bar img {
+      height: 30px;
+      width: 30px;
+      margin: 5px; }
 
 .home-wrap .recent-articles h5 {
   margin-bottom: 5px; }
@@ -2946,16 +3024,16 @@ body {
   .home-wrap .push-down {
     padding-top: 40px; } }
 
-.article-container .category {
-  text-transform: uppercase;
-  color: #727272;
-  font-size: 12px; }
-  .article-container .category:hover {
-    text-decoration: underline; }
-
-.article-container .meta {
-  color: #727272;
-  font-size: 12px; }
-
-.article-container .post-title-image img {
-  size: cover; }
+.post-content {
+  margin-top: 50px; }
+  .post-content .category {
+    text-transform: uppercase;
+    color: #727272;
+    font-size: 12px; }
+    .post-content .category:hover {
+      text-decoration: underline; }
+  .post-content .meta {
+    color: #727272;
+    font-size: 12px; }
+  .post-content .post-title-image img {
+    size: cover; }
