jekyll loop that properly lists posts in a given category on the home page

--- a/assets/css/2-modules/footer.sass
+++ b/assets/css/2-modules/footer.sass
@@ -10,7 +10,9 @@
     .col-sm-3
       height: 200px
     .right-bar
-      border-left: solid 2px $primary-color-light
+      padding: 0
+      @media (min-width: 786px)
+        border-left: solid 2px $primary-color-light
       height: 100%
       margin-top: 5%
       .social-bar
