--- a/assets/css/4-layouts/home.sass
+++ b/assets/css/4-layouts/home.sass
@@ -22,7 +22,6 @@
   .half-section-left
     @media (min-width: 786px)
       padding-right: 3px
-  .half-section-right
     @media (min-width: 786px)
       padding-left: 3px
   .article-cards
@@ -37,17 +36,15 @@
         filter: alpha(opacity=100)
     h5
       margin-top: 5px
-    .date
+    .meta
       margin-top: 5px
       margin-bottom: 0
-    .category, .date
+    .meta
       text-transform: uppercase
       color: $secondary-text
       font-size: 12px
       &:hover
         text-decoration: underline
-    .description
-      color: $secondary-text
     .thumbnails
       width: 100%
   .border-top
