--- a/assets/css/1-base/_base.sass
+++ b/assets/css/1-base/_base.sass
@@ -66,10 +66,8 @@ body
   -webkit-text-size-adjust: 100%
 
 .container
-<<<<<<< HEAD
-  padding: 0 5px 5px 5px
-=======
->>>>>>> 21b9f7f56874f6001e291fb172eeec5ae6bfd04a
+  @media (max-width: 786px)
+    padding: 0 5px 5px 5px
   @media (min-width: 786px)
     padding: 0 0 100px 0
 
