--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2786,17 +2786,13 @@ body {
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%; }
 
-<<<<<<< HEAD
-.container {
-  padding: 0 5px 5px 5px; }
-  @media (min-width: 786px) {
-    .container {
-      padding: 0 0 100px 0; } }
-=======
+@media (max-width: 786px) {
+  .container {
+    padding: 0 5px 5px 5px; } }
+
 @media (min-width: 786px) {
   .container {
     padding: 0 0 100px 0; } }
->>>>>>> 21b9f7f56874f6001e291fb172eeec5ae6bfd04a
 
 .no-padding {
   padding: 0; }
